# ufabc-pgc-computer-sciences

./: .gitignore  README.md  envvars.sh  rbac.yaml
aks-infra/: deploy-acr.sh  deploy-aks.sh  destroy-aks.sh
anomaly-detection/: generate_train_dataset.py  pyproject.toml
loki-helm/: loki-deploy.sh
